fixes vertical alignment of info icon

--- a/cdap-ui/app/features/tracker/directives/truth-meter/truth-meter.less
+++ b/cdap-ui/app/features/tracker/directives/truth-meter/truth-meter.less
@@ -51,7 +51,6 @@ my-truth-meter {
     color: #999999;
     font-size: 14px;
     margin-left: 8px;
-    vertical-align: top;
   }
 }
 
